# sunnyterm

./: Cargo.toml  electron.vite.config.ts  package.json
.github/workflows/: release.yml
assets/shaders/: background.wgsl  text.wgsl
config/: default.toml
electron/: completions.ts  history.ts  main.ts  preload.ts  pty.ts
resources/: icon.icns
src/: App.tsx  app.rs  http_pane.rs  main.rs  pane.rs  postgres_pane.rs  state.rs
src/canvas/: InfiniteCanvas.tsx
src/config/: settings.rs
src/focus/: FocusView.tsx
src/hooks/: useKeyboard.ts
src/input/: completion.rs  history.rs  keyboard.rs  mod.rs  mouse.rs
src/lib/: commandHistory.ts  ghostTextRenderer.ts  inputInterceptor.ts  syntaxHighlight.ts
src/minimap/: Minimap.tsx
src/renderer/: atlas.rs  cursor.rs  draw_helpers.rs  gpu.rs  grid_renderer.rs  http_tile_renderer.rs  mod.rs  postgres_tile_renderer.rs  text.rs  tile_renderer.rs  ui_renderer.rs
src/ssh/: session.rs
src/store/: index.ts
src/terminal/: cell.rs  grid.rs  mod.rs  parser.rs  pty.rs  scroll.rs
src/tiles/: BrowserTile.tsx  CompletionDropdown.tsx  TerminalShortcuts.tsx  TerminalTile.tsx  TileContainer.tsx
src/types/: index.ts
src/ui/: canvas.rs  canvas_theme.rs  mod.rs  palette.rs  splits.rs  tabs.rs  theme.rs
