[package]
name = "sunnyterm"
version = "0.1.0"
edition = "2021"
description = "A minimal, GPU-accelerated terminal emulator for macOS"

[dependencies]
# Window management and event loop
winit = "0.30"

# GPU rendering
wgpu = "24"

# Terminal emulation
vte = "0.13"
portable-pty = "0.8"

# Font rendering
cosmic-text = "0.12"

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

# Logging
log = "0.4"
env_logger = "0.11"

# Async
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
anyhow = "1"
libc = "0.2"
ureq = "3"
postgres = { version = "0.19", features = ["with-serde_json-1"] }
postgres-native-tls = "0.5"
native-tls = "0.2"

# macOS specifics
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[package.metadata.bundle]
name = "SunnyTerm"
identifier = "com.sunnyterm.app"
category = "public.app-category.developer-tools"
short_description = "GPU-accelerated terminal emulator with infinite canvas"
osx_minimum_system_version = "13.0"

[profile.release]
opt-level = 3
lto = true
